# ponderTTT

./: .gitignore  .gitmodules  ARCHIVE.md  CITATION.cff  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  LICENSE  Makefile  NOVELTY_DIFFERENTIATION.md  PLAN.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  STATUS.md  TODO.md  TPU_READY.md  TROUBLESHOOTING.md  TTT_IMPLEMENTATION_COMPARISON.md  analyze_full_suite.py  analyze_results.py  check_params.py  debug_humaneval_generation.py  debug_ttt_gating.py  main.py  pyproject.toml  pyrightconfig.json  pytest.ini  reproduce_inference.py  requirements.txt  ruff.toml  test_checkpointing.py  verify_results.py
archive/experiments/: analyze_gradient_norm.py  compare_methods.py  evaluate_advanced_gating.py
docs/: CNAME  index.html
examples/: tpu_pod_usage.py
experiments/: README.md  analyze_wikitext2.py  day3_analysis.py  generate_demo_results.py  mini_experiment.py  quick_demo.py  test_calibration.py  test_setup.py  toy_experiment.py  toy_experiment_v2.py  visualize_results.py  wikitext2_experiment.py
experiments/results/: demo_adaptive_adaptive.json  demo_baseline_1.json  demo_baseline_2.json  demo_baseline_4.json  quick_demo.json
paper/: arXiv.sty  citation.bib  main.tex
scripts/: ablation_strict_causal.py  analyze_350m_failure.py  analyze_gating_signals.py  compare_gemma3_nnx.py  compare_gpt2_nnx.py  compare_ttt_lora.py  debug_xl_loading.py  diagnose_350m.py  eval_gemma3_humaneval.py  measure_gpu_util.py  measure_latency.py  quick_test.py  run_all_experiments.sh  run_all_experiments2.sh  run_baselines.sh  run_sweep.sh  run_verification.sh  setup_environment.sh  setup_gpu_environment.sh  shuffled_input_test.py  test_distributed.py  test_pipeline.py  test_shuffled_input.py  test_weight_tying.py  train_gemma3_ttt.py  train_tpu.py  validate_fullseq_gating.sh  validate_inversion.py  validate_tpu_setup.py  verify_correlation.py  verify_gemma3_nnx.py  visualize_results.py
src/ponderttt/: __init__.py  gating.py
src/ponderttt/data/: __init__.py  dataset.py  tokenization.py  wikitext.py
src/ponderttt/evaluation/: __init__.py  benchmarks.py  metrics.py
src/ponderttt/experiments/: __init__.py  analyze_advantage.py  analyze_gradient_norm.py  analyze_signals.py  compare_gemma3_methods.py  compare_methods.py  compare_methods_v2.py  compare_topk_methods.py  config.py  convergence_analysis.py  debug_benchmarks.py  eval_core.py  evaluate_advanced_gating.py  extended_oracle_analysis.py  full_comparison_suite.py  jit_helpers.py  oracle_analysis.py  run_benchmarks.py  train_baseline.py  train_baseline_finetune.py  train_differentiable.py  train_gemma3.py  train_hard_skip.py  train_policy.py  train_topk_gating.py  training_utils.py  wikitext2_experiment.py
src/ponderttt/gating/: __init__.py  base.py  ema.py  fixed.py  random.py  reconstruction.py  threshold.py
src/ponderttt/models/: __init__.py  adaptive_ttt.py  advanced_gating.py  base_model.py  base_model_nnx.py  checkpoint_converter.py  fast_weight.py  fast_weight_linear.py  fast_weights.py  gating_nnx.py  gpt2_nnx.py  halting_policy.py  heuristic_policies.py  iterative_ttt.py  iterative_ttt_v2.py  lora_layer_nnx.py  policy.py  policy_nnx.py  transformer_iterative.py  transformer_ttt.py  ttt_layer.py  ttt_layer_nnx.py  ttt_linear.py  ttt_linear_analytic.py  ttt_linear_official.py
src/ponderttt/training/: __init__.py  pid_lagrangian.py  policy_trainer.py  ttt_trainer.py
src/ponderttt/utils/: __init__.py  checkpointing.py  features.py  flops.py  jax_utils.py  (+3 more)
tests/: test_basic.py  test_checkpointing.py  test_extended_oracle_analysis.py  test_flops.py  test_heuristic_calibration.py  test_integration.py  test_iterative_ttt.py  test_layernorm_fixes.py  test_metrics.py  test_oracle_analysis_fixes.py  test_reinforce_fixes.py  test_ttt_linear_analytic.py
(+11 files in other folders)
