[project]
name = "ponderttt"
version = "0.2.0"
description = "Adaptive Budget-Constrained Test-Time Training for Code Generation"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "deveworld"}
]
license = {text = "MIT"}
keywords = ["test-time-training", "adaptive-computation", "llm", "efficiency"]

dependencies = [
    # JAX/Flax stack
    "jax>=0.8.0",
    "jaxlib>=0.8.0",
    "flax>=0.12.0",
    "optax>=0.2.6",
    "orbax-checkpoint>=0.11.28",
    # ML utilities
    "numpy>=2.3.4",
    "einops>=0.8.1",
    "ml_collections>=1.1.0",
    # Data and tokenization
    "transformers>=4.57.1",
    "datasets>=4.4.1",
    "tokenizers>=0.22.1",
    "boto3>=1.40.74",
    "smart-open[s3]>=7.5.0",
    # Visualization and logging
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "wandb>=0.23.0",
    # Scientific computing
    "scipy>=1.16.3",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pyrefly>=0.41.3",  # Fast type checker by Facebook (alternative to mypy/pyright)
    "pyright>=1.1.407",
    "pytest>=9.0.1",
    "ruff>=0.14.5",
    "ty>=0.0.1a26",
]
