[project]
name = "ponderttt"
version = "0.3.0"
description = "Adaptive Budget-Constrained Test-Time Training for Code Generation"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "deveworld"}
]
license = {text = "MIT"}
keywords = ["test-time-training", "adaptive-computation", "llm", "efficiency"]

dependencies = [
    # JAX/Flax stack
    "jax>=0.4.35",
    "jaxlib>=0.4.35",
    "flax>=0.10.0",
    "optax>=0.2.0",
    "orbax-checkpoint>=0.10.0",
    # ML utilities
    "numpy>=1.26.0",
    "einops>=0.8.0",
    "ml_collections>=0.1.0",
    # Data and tokenization
    "datasets>=3.0.0",
    "tokenizers>=0.19.0",
    "boto3>=1.34.0",
    "smart-open[s3]>=7.0.0",
    # Visualization and logging
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "tqdm>=4.66.0",
    "wandb>=0.16.0",
    # Scientific computing
    "scipy>=1.13.0",
    # Optimized weight loading (No torch/transformers required)
    "safetensors>=0.4.0",
    "huggingface_hub>=0.20.0",
    # GPU Monitoring
    "nvidia-ml-py>=12.535.133",
]

[dependency-groups]
dev = [
    "jaxtyping>=0.2.28",
    "pyright>=1.1.350",
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]
gpu = ["jax[cuda12]"]
gpu12 = ["jax[cuda12]"]
tpu = ["jax[tpu]"]

[tool.pyright]
exclude = [".venv/**", "dist/**", "archive/**", "build/**"]
typeCheckingMode = "basic"
